実機へリリース

--- a/TimeLauncher/Resources/layout/activity_main.xml
+++ b/TimeLauncher/Resources/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/btn_showSelectTime"
-        android:id="@+id/btn_Launch" />
+        android:id="@+id/btn_Launch"
+        android:textSize="@dimen/abc_text_size_large_material"/>
 
 </RelativeLayout>
