--- a/TimeLauncher/Resources/layout/activity_main.xml
+++ b/TimeLauncher/Resources/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:id="@+id/textView2"
         android:gravity="center_horizontal"/>
     <Button
-        android:text="時刻指定"
+        android:text="各種設定"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_showSelectTime"
